// Vitest Snapshot v1

exports[`resolve > basic.js 1`] = `
"const a = 'a';

const foo = 'bar';

export { a, foo };
"
`;

exports[`resolve > exclude-self.js 1`] = `
"const a = 'a';

const foo = 'bar';

export { a, foo };
"
`;

exports[`resolve > import-all.ts 1`] = `
"const a = 'a';

const foo = 'bar';

console.log(a);
console.log(foo);

export { a, foo };
"
`;

exports[`resolve > ts.ts 1`] = `
"const a = 'a';

const foo = 'bar';

export { a, foo };
"
`;
